--- a/Attar group project/attar_group_frontend/package.json
+++ b/Attar group project/attar_group_frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "framer-motion": "^12.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -25,6 +28,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "vite": "^6.3.5"
   }
 }
